<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/kotak_atas"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="64dp"
                    android:paddingBottom="20dp"
                    android:fontFamily="@font/lobster"
                    android:text="Buat Akun"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/subtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/lobster"
                    android:text="It's quick and easy."
                    android:textColor="#9b9b9b"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_account" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtext"/>
                <EditText
                    android:id="@+id/nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/enter_nim"
                    android:inputType="textPersonName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nim"/>
                <EditText
                    android:id="@+id/jurusan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/enter_jurusan"
                    android:inputType="text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"/>
                <EditText
                    android:id="@+id/semester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/enter_semester"
                    android:inputType="number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jurusan"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/semester"/>

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="330dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="135dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="135dp"
                    android:background="@drawable/btn_blue2"
                    android:fontFamily="@font/lobster"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="330dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="135dp"
                    android:layout_marginRight="135dp"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/lobster"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_register"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>